force-app/main/default/objects/ProductConsumed/fields/HRCFSL_Concession_Approved_by__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Concession_Approved_by__c</fullName>
    <label>Concession Approved by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>