force-app/main/default/objects/ProductConsumed/fields/HRCFSL_Concession_By__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Concession_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Concession By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Products_Consumed</relationshipName>
    <type>Lookup</type>
</CustomField>