force-app/main/default/objects/ProductConsumed/fields/HRCFSL_Concession_Date__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Concession_Date__c</fullName>
    <label>Concession Date</label>
    <type>DateTime</type>
</CustomField>