force-app/main/default/objects/ProductConsumed/fields/HRCFSL_Concession_Reason__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Concession_Reason__c</fullName>
    <label>Concession Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>