force-app/main/default/objects/ProductConsumed/fields/HRCFSL_Disposition_Code__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Disposition_Code__c</fullName>
    <label>Disposition Code</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HRCFSL_Disposition_Code</valueSetName>
    </valueSet>
</CustomField>