force-app/main/default/objects/ProductConsumed/fields/HRCFSL_JDE_Work_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_JDE_Work_Order_ID__c</fullName>
    <formula>WorkOrder.HRCFSL_JDE_ID__c</formula>
    <label>ERP Work Order ID</label>
    <type>Text</type>
</CustomField>