force-app/main/default/objects/ProductConsumed/fields/HRCFSL_No_Charge_Concession__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_No_Charge_Concession__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Charge Concession</label>
    <type>Checkbox</type>
</CustomField>