force-app/main/default/objects/ProductConsumed/fields/HRCFSL_Notes__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Notes__c</fullName>
    <label>Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>