force-app/main/default/objects/ProductConsumed/fields/HRCFSL_Part_Name__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Part_Name__c</fullName>
    <description>The name of the product which has been consumed. Needed to be sent to JDE via work order integration. HF-67.</description>
    <formula>left(PricebookEntry.Product2.Name, FIND(&quot;_&quot;, PricebookEntry.Product2.Name )-1)</formula>
    <label>Part Name</label>
    <type>Text</type>
</CustomField>