force-app/main/default/objects/ProductConsumed/fields/HRCFSL_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Part_Number__c</fullName>
    <description>#HF 45 : for storing Associated Product&apos;s Part Number</description>
    <formula>PricebookEntry.Product2.HRCFSL_Parts_Number__c</formula>
    <label>Part Number</label>
    <type>Text</type>
</CustomField>