force-app/main/default/objects/ProductConsumed/fields/HRCFSL_Purchase_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Purchase_Order_Number__c</fullName>
    <inlineHelpText>Required if Coverage Override is Billable</inlineHelpText>
    <label>Purchase Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>