force-app/main/default/objects/ProductConsumed/fields/HRCFSL_Root_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Root_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Root Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Related Parts Consumed</relationshipLabel>
    <relationshipName>Related_Products_Consumed</relationshipName>
    <type>Lookup</type>
</CustomField>