force-app/main/default/objects/ProductConsumed/fields/HRCFSL_Serial_Number_Out__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Serial_Number_Out__c</fullName>
    <label>Serial Number Out</label>
    <length>80</length>
    <type>Text</type>
</CustomField>