force-app/main/default/objects/ProductConsumed/fields/HRCFSL_Service_Report_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Service_Report_Part_Number__c</fullName>
    <formula>RIGHT(PricebookEntry.Product2.Name,  LEN(PricebookEntry.Product2.Name) -  FIND(&apos;_&apos;,PricebookEntry.Product2.Name )  )</formula>
    <label>Part Number</label>
    <type>Text</type>
</CustomField>