force-app/main/default/objects/ProductConsumed/fields/HRCFSL_Work_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Work_Order_Id__c</fullName>
    <formula>CASESAFEID(WorkOrderId)</formula>
    <label>Work Order Id</label>
    <type>Text</type>
</CustomField>