force-app/main/default/objects/ProductConsumed/fields/HRCSVC_Coverage_Override__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Coverage_Override__c</fullName>
    <description>Picklist of coverage override types as defined in SE-189.</description>
    <label>Coverage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rental</fullName>
            </value>
            <value>
                <fullName>Warranty</fullName>
            </value>
            <value>
                <fullName>Service Contract</fullName>
            </value>
            <value>
                <fullName>Billable</fullName>
            </value>
            <value>
                <fullName>Field Action / Mod</fullName>
            </value>
            <value>
                <fullName>Concession</fullName>
            </value>
            <value>
                <fullName>Consumed as Part of a Job</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>