force-app/main/default/objects/ProductConsumed/fields/HRCSVC_Location_New__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Location_New__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parts Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Products Consumed</relationshipLabel>
    <relationshipName>Products_Consumed</relationshipName>
    <type>Lookup</type>
</CustomField>