force-app/main/default/objects/ProductConsumed/fields/HRCSVC_Override_Notes__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Override_Notes__c</fullName>
    <description>Field that captures notes which may be input as part of the coverage override process. SE-189.</description>
    <inlineHelpText>Required if Coverage Override is Warranty</inlineHelpText>
    <label>Override Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>