force-app/main/default/objects/ProductConsumed/fields/HRCSVC_Part_Location__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Part_Location__c</fullName>
    <label>Parts Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>