force-app/main/default/objects/ProductConsumed/fields/HRCSVC_Quoted_Part__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Quoted_Part__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Quoted Part</label>
    <referenceTo>HRCFSL_Quoted_Part__c</referenceTo>
    <relationshipLabel>Products Consumed</relationshipLabel>
    <relationshipName>Products_Consumed</relationshipName>
    <type>Lookup</type>
</CustomField>