force-app/main/default/objects/ProductConsumed/fields/HRCSVC_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Total_Price__c</fullName>
    <description>Field that calculates the total price of a product consumed line by multiplying the quantity consumed and unit price. SE-195</description>
    <formula>IF(ISBLANK(HRCSVC_Unit_Price_Override__c),
(100 - HRCSVC_Discount_Percent__c) * (UnitPrice * QuantityConsumed),
QuantityConsumed * HRCSVC_Unit_Price_Override__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>