force-app/main/default/objects/ProductConsumed/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <inlineHelpText>Required if Coverage Override is Consumed As Part of Job</inlineHelpText>
    <label>Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>