force-app/main/default/objects/ProductConsumed/validationRules/HRCSVC_Cannot_change_if_quoted.validationRule-meta.xml
<ValidationRule>
    <fullName>HRCSVC_Cannot_change_if_quoted</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(HRCSVC_Quoted_Part__c)) &amp;&amp; NOT(ISNEW()) &amp;&amp; (ISCHANGED(HRCSVC_Quoted_Part__c) || ISCHANGED(QuantityConsumed) || ISCHANGED(UnitPrice) || ISCHANGED(HRCSVC_Discount_Percent__c) || ISCHANGED(HRCSVC_Coverage_Override__c))</errorConditionFormula>
    <errorMessage>You cannot change the Unit Price or Quantity of a Quoted Part. You must delete this record, re-quote it, and then re-consume the Quoted Part to obtain a new price.</errorMessage>
</ValidationRule>