force-app/main/default/objects/ProductConsumed/validationRules/HRCSVC_CoverageOverrideConcessionAppr.validationRule-meta.xml
<ValidationRule>
    <fullName>HRCSVC_CoverageOverrideConcessionAppr</fullName>
    <active>true</active>
    <description>When Coverage Override = Concession, then Concession Approved By and Coverage Reason is required</description>
    <errorConditionFormula>ISPICKVAL(HRCSVC_Coverage_Override__c , &quot;Concession&quot;) &amp;&amp; 
(OR(ISBLANK( HRCFSL_Concession_Approved_by__c ), ISBLANK (HRCFSL_Concession_Reason__c )))</errorConditionFormula>
    <errorMessage>You have selected that the Coverage Override reason was Concession.  Concession Approved By and Concession Reason is required.</errorMessage>
</ValidationRule>