force-app/main/default/objects/ProductConsumed/validationRules/HRCSVC_CoverageOverrideConcessionReason.validationRule-meta.xml
<ValidationRule>
    <fullName>HRCSVC_CoverageOverrideConcessionReason</fullName>
    <active>true</active>
    <description>When Coverage Override = Concession, then Concession Reason is required</description>
    <errorConditionFormula>ISPICKVAL(HRCSVC_Coverage_Override__c , &quot;Concession&quot;) &amp;&amp; ISNULL( HRCFSL_Concession_Reason__c )</errorConditionFormula>
    <errorDisplayField>HRCFSL_Concession_Reason__c</errorDisplayField>
    <errorMessage>You have selected that the Coverage Override reason was Concession.  Concession Reason is required.</errorMessage>
</ValidationRule>