force-app/main/default/objects/ProductConsumed/validationRules/HRCSVC_CoverageOverrideConsumedAsPartO.validationRule-meta.xml
<ValidationRule>
    <fullName>HRCSVC_CoverageOverrideConsumedAsPartO</fullName>
    <active>true</active>
    <description>When Coverage Override = Consumed As Part of Job, then Material Number is required</description>
    <errorConditionFormula>ISPICKVAL(HRCSVC_Coverage_Override__c , &quot;Consumed as Part of a Job&quot;) &amp;&amp; ISBLANK(Material__c)</errorConditionFormula>
    <errorDisplayField>Material__c</errorDisplayField>
    <errorMessage>You have selected that the Coverage Override reason was Consumed As Part of a Job.  Material Number is required.</errorMessage>
</ValidationRule>