force-app/main/default/objects/ProductConsumed/validationRules/HRCSVC_CoverageOverrideFieldActionMOD.validationRule-meta.xml
<ValidationRule>
    <fullName>HRCSVC_CoverageOverrideFieldActionMOD</fullName>
    <active>true</active>
    <description>When Coverage Override = Field Action / MOD, then Field Action/MOD is required</description>
    <errorConditionFormula>ISPICKVAL(HRCSVC_Coverage_Override__c , &quot;Field Action / MOD&quot;) &amp;&amp; ISBLANK( HRCSVC_Field_Action_Mod__c )</errorConditionFormula>
    <errorDisplayField>HRCSVC_Field_Action_Mod__c</errorDisplayField>
    <errorMessage>You have selected that the Coverage Override reason was Field Action / MOD.  Field Action/MOD is required.</errorMessage>
</ValidationRule>