force-app/main/default/objects/ProductConsumed/validationRules/HRCSVC_CoverageOverrideServiceContract.validationRule-meta.xml
<ValidationRule>
    <fullName>HRCSVC_CoverageOverrideServiceContract</fullName>
    <active>true</active>
    <description>When Coverage Override = Service Contract, then Entitlement is required</description>
    <errorConditionFormula>ISPICKVAL(HRCSVC_Coverage_Override__c, &quot;Service Contract&quot;) &amp;&amp; ISBLANK(WorkOrder.EntitlementId)</errorConditionFormula>
    <errorMessage>You must have an entitlement populated on the work order for this coverage option.</errorMessage>
</ValidationRule>