force-app/main/default/objects/ProductConsumed/validationRules/HRCSVC_CoverageOverrideWarranty.validationRule-meta.xml
<ValidationRule>
    <fullName>HRCSVC_CoverageOverrideWarranty</fullName>
    <active>true</active>
    <description>When Coverage Override = Warranty, then Override Notes can not be null</description>
    <errorConditionFormula>ISPICKVAL(HRCSVC_Coverage_Override__c , &quot;Warranty&quot;) &amp;&amp; ISBLANK(HRCSVC_Override_Notes__c)</errorConditionFormula>
    <errorDisplayField>HRCSVC_Override_Notes__c</errorDisplayField>
    <errorMessage>You have selected that the Coverage Override reason was Warranty.  Override Notes are required.</errorMessage>
</ValidationRule>