force-app/main/default/objects/ProductConsumed/validationRules/Warranty_selected_and_not_populated.validationRule-meta.xml
<ValidationRule>
    <fullName>Warranty_selected_and_not_populated</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(HRCSVC_Coverage_Override__c , &quot;Warranty&quot;) &amp;&amp; ISBLANK(WorkOrder.HRCSVC_AssetWarrantyId__c)</errorConditionFormula>
    <errorMessage>You must have a warranty populated on the work order for this coverage option.</errorMessage>
</ValidationRule>